# API-for-Kaggle_MNIST

./: .gitignore  MNIST.ipynb  main.py  mnist_cnn.pt  model.py  pyproject.toml
